[package]
name = "self-replace"
version = "1.0.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/mitsuhiko/self-replace"
keywords = ["self-update", "self-replace"]
rust-version = "1.61"

[dependencies]
tempfile = "3.5.0"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
] }
