[package]
name = "self-replace"
version = "1.0.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Utility crate that allows executables to replace or uninstall themselves"
homepage = "https://github.com/mitsuhiko/self-replace"
repository = "https://github.com/mitsuhiko/self-replace"
keywords = ["self-update", "self-replace", "self-uninstall", "replace", "uninstall"]
rust-version = "1.48"
exclude = ["examples", "demo*"]

[dependencies]
tempfile = "3.5.0"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
] }
